tweaks to resolve timing errors (main loop uses single state machine)

--- a/Addatone_MachX03/.spreadsheet_view.ini
+++ b/Addatone_MachX03/.spreadsheet_view.ini
@@ -3,7 +3,7 @@ pin_sort_type=0
 pin_sort_ascending=true
 sig_sort_type=0
 sig_sort_ascending=true
-active_Sheet=Port Assignments
+active_Sheet=Timing Preferences
 
 [Port%20Assignments]
 Name="194,0"
@@ -33,7 +33,7 @@ sort_columns="Name,Ascending"
 [Pin%20Assignments]
 Pin="90,0"
 Pad%20Name="89,1"
-Dual%20Function="194,2"
+Dual%20Function="261,2"
 Polarity="77,3"
 BANK="0,4"
 BANK_VCC="90,5"
@@ -63,9 +63,9 @@ Name="100,ELLIPSIS"
 Prioritize="100,ELLIPSIS"
 
 [Timing%20Preferences]
-Preference%20Name="236,ELLIPSIS"
+Preference%20Name="170,ELLIPSIS"
 Preference%20Value="105,ELLIPSIS"
-Preference%20Unit="1225,ELLIPSIS"
+Preference%20Unit="1291,ELLIPSIS"
 
 [Group]
 Group%20Type\Name="134,ELLIPSIS"
