Fixes to sample LUT calculations

--- a/Addatone_MachX03/.floorplanner.ini
+++ b/Addatone_MachX03/.floorplanner.ini
@@ -2,7 +2,7 @@
 showNCD=true
 showPgroups=true
 showCongestion=false
-showConnsSelect=false
+showConnsSelect=true
 showConnsBetween=true
 showConnsOutside=true
 showLPF=true
@@ -11,4 +11,4 @@ showUGROUPs=true
 showPARITIONs=true
 showLogicalConnections=false
 dontShowBBoxOverlapWarning=false
-sceneInViewRect=@Variant(\0\0\0\x14\xc0\xdf\x19\x9e@\xd5\xa0\x9e\xc0r\x83\xf0\xab\xf5\xf\xd9\x41\fu\xcepQ/\xdc@\xf9\x9ar\xcd\xc8\xdf\xea)
+sceneInViewRect=@Variant(\0\0\0\x14\xc0\xd4\xcaV\xd3\xe\xb2G\xc0\x80\xd7\xc4\xb7\xf1\xfb]A\t\xe3\xa8\xe0\xbes\xe0@\xf9\xb9\x8dt\xf2\x96\xeb)
