--- a/Addatone_MachX03/addatone_sim/compile.cfg
+++ b/Addatone_MachX03/addatone_sim/compile.cfg
@@ -1,26 +1,20 @@
-[file:.\..\DAC_SPI_Out.v]
-Enabled=1
-[file:.\..\ADC_SPI_In.v]
+[file:.\..\src\TestBench_Top.v]
 Enabled=1
 [file:.\..\SineLUT.v]
 Enabled=1
 [file:.\..\OscPll.v]
 Enabled=1
-[file:.\..\top.v]
+[file:.\..\src\top.v]
 Enabled=1
-[file:.\..\TestBench_Top.v]
+[file:.\..\src\ADC_SPI_In.v]
+Enabled=1
+[file:.\..\src\DAC_SPI_Out.v]
+Enabled=1
+[file:.\..\src\Fraction.v]
+Enabled=1
+[file:.\..\src\sample_pos_RAM.v]
 Enabled=1
 [View]
 Entity=TestBench_Top
 Architecture=
 TopLevelType=3
-[file:.\sample_output_list.awc]
-Enabled=1
-[file:.\..\Sin_qlut.v]
-Enabled=1
-[file:.\..\sample_pos_RAM.v]
-Enabled=1
-[file:.\src\osc_waveform.awc]
-Enabled=1
-[file:.\..\Fraction.v]
-Enabled=1
