--- a/Addatone_MachX03/addatone_sim/library.cfg
+++ b/Addatone_MachX03/addatone_sim/library.cfg
@@ -1,3 +1,3 @@
 $include = "$VSIMSALIBRARYCFG"
-osc_sim = "./osc_sim/osc_sim.lib" 1580919242241
-work = "./work/work.lib" 1580919242496
+addatone_sim = "./addatone_sim/addatone_sim.lib" 1582462115828
+work = "./work/work.lib" 1582462116113
