--- a/Addatone_MachX03/addatone_sim/projlib.cfg
+++ b/Addatone_MachX03/addatone_sim/projlib.cfg
@@ -1,2 +1,2 @@
-osc_sim = "./osc_sim/osc_sim.lib" 1580919242024
-work = "./work/work.lib" 1580919242437
+addatone_sim = "./addatone_sim/addatone_sim.lib" 1582462115640
+work = "./work/work.lib" 1582462116051
