Changes to use sample position lookup; tidied up top state machine

--- a/Addatone_MachX03/.floorplanner.ini
+++ b/Addatone_MachX03/.floorplanner.ini
@@ -11,4 +11,4 @@ showUGROUPs=true
 showPARITIONs=true
 showLogicalConnections=false
 dontShowBBoxOverlapWarning=false
-sceneInViewRect=@Variant(\0\0\0\x14\xc0\xd4\xcaV\xd3\xe\xb2G\xc0\x80\xd7\xc4\xb7\xf1\xfb]A\t\xe3\xa8\xe0\xbes\xe0@\xf9\xb9\x8dt\xf2\x96\xeb)
+sceneInViewRect=@Variant(\0\0\0\x14\xc0\xdc\xfe\x18\xb7j\x12`\xc0\xb2\xc2\x88v\xae\v\xe4\x41\v\xf6R0\xe5\\d@\xfb\xc8\xd7\xaf\xc5\xa6\xf1)
