Refactored sample position module to combine sample position and sine LUT lookup

--- a/Addatone_MachX03/addatone_sim/compile.cfg
+++ b/Addatone_MachX03/addatone_sim/compile.cfg
@@ -22,3 +22,7 @@ TopLevelType=3
 Enabled=1
 [file:.\..\SamplePos_RAM.v]
 Enabled=1
+[file:.\src\addatone.awc]
+Enabled=1
+[file:.\src\test.do]
+Enabled=1
