--- a/Addatone_MachX03/.spreadsheet_view.ini
+++ b/Addatone_MachX03/.spreadsheet_view.ini
@@ -3,17 +3,17 @@ pin_sort_type=0
 pin_sort_ascending=true
 sig_sort_type=0
 sig_sort_ascending=true
-active_Sheet=Timing Preferences
+active_Sheet=Port Assignments
 
 [Port%20Assignments]
-Name="194,0"
+Name="177,0"
 Group%20By="84,1"
 Pin="67,2"
 BANK="62,3"
 BANK_VCC="90,4"
 VREF="60,5"
 IO_TYPE="147,6"
-PULLMODE="97,7"
+PULLMODE="92,7"
 DRIVE="67,8"
 SLEWRATE="92,9"
 CLAMP="71,10"
@@ -38,7 +38,7 @@ Polarity="77,3"
 BANK="0,4"
 BANK_VCC="90,5"
 IO_TYPE="147,6"
-Signal%20Name="179,7"
+Signal%20Name="145,7"
 Signal%20Type="115,8"
 sort_columns="Pin,Ascending"
 
@@ -65,7 +65,7 @@ Prioritize="100,ELLIPSIS"
 [Timing%20Preferences]
 Preference%20Name="170,ELLIPSIS"
 Preference%20Value="105,ELLIPSIS"
-Preference%20Unit="1291,ELLIPSIS"
+Preference%20Unit="1310,ELLIPSIS"
 
 [Group]
 Group%20Type\Name="134,ELLIPSIS"
