--- a/Addatone_MachX03/.spreadsheet_view.ini
+++ b/Addatone_MachX03/.spreadsheet_view.ini
@@ -3,7 +3,7 @@ pin_sort_type=0
 pin_sort_ascending=true
 sig_sort_type=0
 sig_sort_ascending=true
-active_Sheet=Port Assignments
+active_Sheet=Global Preferences
 
 [Port%20Assignments]
 Name="177,0"
