--- a/Addatone_MachX03/.spreadsheet_view.ini
+++ b/Addatone_MachX03/.spreadsheet_view.ini
@@ -3,7 +3,7 @@ pin_sort_type=0
 pin_sort_ascending=true
 sig_sort_type=0
 sig_sort_ascending=true
-active_Sheet=Global Preferences
+active_Sheet=Port Assignments
 
 [Port%20Assignments]
 Name="177,0"
@@ -65,7 +65,7 @@ Prioritize="100,ELLIPSIS"
 [Timing%20Preferences]
 Preference%20Name="170,ELLIPSIS"
 Preference%20Value="105,ELLIPSIS"
-Preference%20Unit="1310,ELLIPSIS"
+Preference%20Unit="98,ELLIPSIS"
 
 [Group]
 Group%20Type\Name="134,ELLIPSIS"
