--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Addatone_MachX03/impl1/*
 Addatone_MachX03/Addatone_tcr.dir/*
 Addatone_STM32F405/Debug/*
 Addatone_MachX03/addatone_sim/src/wave.asdbw/*
+Addatone_ICE40/Addaton_Sim/*
 *.html
 *.log
 *.tcr
@@ -14,3 +15,4 @@ Addatone_MachX03/addatone_sim/src/wave.asdbw/*
 *.sch-bak
 *.zip
 *.dmp
+
