--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Addatone_MachX03/Addatone_tcr.dir/*
 Addatone_STM32F405/Debug/*
 Addatone_MachX03/addatone_sim/src/wave.asdbw/*
 Addatone_ICE40/Addaton_Sim/*
+Addatone_ICE40/Addatone_Sim/*
 *.html
 *.log
 *.tcr
