--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Addatone_MachX03/addatone_sim/work/*
 Addatone_MachX03/impl1/*
 Addatone_MachX03/Addatone_tcr.dir/*
 Addatone_STM32F405/Debug/*
+Addatone_STM32F446/Debug/*
 Addatone_MachX03/addatone_sim/src/wave.asdbw/*
 Addatone_ICE40/Addaton_Sim/*
 Addatone_ICE40/Addatone_Sim/*
