--- a/Addatone_ICE40/.floorplanner.ini
+++ b/Addatone_ICE40/.floorplanner.ini
@@ -1,5 +1,5 @@
 [General]
-sceneInViewRect=@Variant(\0\0\0\x14\xc0\xef{\x8c\xb8p)\"\xc0\xc5[K\xff\\\x8d\xae\x41\xf\xf7\x45V7\x7f\x1a\x41\0\x62\xbc\x83\xec\x87\x30)
+sceneInViewRect=@Variant(\0\0\0\x14\xc0\xf0}Z\xed\xe\x9c\xf5\xc0\xc5\xe4\xd3\x14\x6~\xa7\x41\x10W\xaa\x1d\x39\xe9\x45\x41\0t|\x9e\t\xbd\xf9)
 showNCD=true
 showPgroups=true
 showCongestion=false
