--- a/Addatone_ICE40/.setting.ini
+++ b/Addatone_ICE40/.setting.ini
@@ -3,6 +3,7 @@ Export.auto_tasks=IBIS
 IdFilter=@Invalid()
 ProcessFilter=@Invalid()
 TypeFilter=7
+PAR.auto_tasks=PARTrace
 
 [Individuals]
 size=0
